--- a/reacttodotask.client/src/App.css
+++ b/reacttodotask.client/src/App.css
@@ -17,3 +17,33 @@ th, td {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+.main-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+li{
+    margin-top: 10px;
+}
+input{
+    height: 20px;
+    width: 200px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin-top: 40px;
+    margin-left: 10px;
+}
+/*button{ 
+    height: 50px;
+    width: 80px;
+    background-color: green !important;
+    font-size: 1.05rem;
+    margin: 10px;
+    cursor: pointer;
+    color:white;
+    align-items: center;
+
+}*/
