--- a/reacttodotask.client/src/index.css
+++ b/reacttodotask.client/src/index.css
@@ -37,17 +37,19 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color:green;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 5px;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: blue;
+  border: 2px solid;
 }
 button:focus,
 button:focus-visible {
@@ -63,6 +65,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: green;
   }
 }
